...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/story"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:freezesText="true"
                android:text="@string/storyPlaceholder"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
...
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.174" />

            <Button
                android:id="@+id/storyContinueButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cont"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.875"
...
