...
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/defaultStats"
                android:textSize="13.5sp" />

            <Button
                android:id="@+id/defaultButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/defaultOptionLabel" />
        </LinearLayout>

        <LinearLayout
...
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/magFocusStats"
                android:textSize="13.5sp" />

            <Button
                android:id="@+id/magButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_horizontal"
                android:text="@string/magOptionLabel" />

        </LinearLayout>
...
