...
    <string name="physicalDefenseUpgradeButtonText">Physical Defense +3</string>
    <string-array name="storyStringsArray">
        <item>You are traveling down a long road, carrying a rare medicine for your sister in your
            pocket. The vial gleams in your bag. A large monster jumps out and steals it.
            You chase after it and find what seems to be its den. You see a smaller monster
            guarding the entrance. There\'s only one way past it.</item>
        <item>You enter the structure. A monster looks at you in shock.</item>
        <item>As you go deeper into the den, you encounter a fork in the road. A monster guards each path.
            You choose to fight the weaker looking one.</item>
        <item>The path is strangely narrow. There\'s nowhere to hide when something appears.</item>
        <item>You come to a room at the end of the road you chose. A slightly bigger monster sits
            in the corner. You can see it isn\'t the same one you encountered earlier, so you try to
            leave without disturbing it. The ground crunches below your feet. The monster turns
...
        <item>Having hit a dead end, you turn around and try the other path. The guard is still
            there, but you now feel powerful enough to take it on.</item>
        <item>This path leads to a much larger area than the first. Three monsters are in this room.
            They are far enough apart that you can take them on one at a time. You approach the one
            closest to you.</item>
        <item>The other two still haven\'t noticed you. You again attack the closest one.</item>
        <item>The third finally sees you. It attacks, angry that you have killed its friends.</item>
        <item>With the room now cleared, you see a small opening, barely big enough for you to crawl
            through. With no where else to go, you enter it. It seems to go on forever. The den is
            much larger than you could have guessed. After what feels like an eternity, the crawl
            space opens to a room full of shiny objects. Sitting in the center is the monster who
            stole your vial.</item>
        <item> You feel stronger than before. You finally have your vial back. The medicine is still
...
