...
                android:id="@+id/playerStatsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playerStatsLabel" />

            <TextView
                android:id="@+id/playerStats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp" />

        </LinearLayout>

...
                android:layout_height="wrap_content" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/magicAttackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/magicAttackButtonLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
...
